--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
           <!-- LIFE MOTTO'S -->
           <h2>"Bekerja keraslah agar bisa hidup enak kaya gue"</h2>
           <div class="medsos">
+            <!-- INSTAGRAM -->
             <a href="#"><img src="img/ig-vector.png" alt="..."> arianagrande</a>
+            <!-- FACEBOOK -->
             <a href="#"><img src="img/fb-vector.png" alt="..."> arianagrande</a>
+            <!-- TWITTER -->
             <a href="#"><img src="img/twitter-vector.png" alt="..."> arianagrande</a>
           </div>
           <!-- SHORT DESCRIPTION -->
